[tool.poetry]
name = "multicloud-codereview"
version = "0.1.0"
description = ""
authors = ["OctoAI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
pydantic-settings = "^2.4.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
